# proof_system_benches

./: .gitignore  README.md  costs.md  pre_block.sh  run.sh  tx_loop.sh  validate_block.sh  verify_block.sh
halo2_bench/: Cargo.toml  sha256_proof
halo2_bench/src/: main.rs
plonky2_bench/: Cargo.toml  README.md
plonky2_bench/plonky2/: Cargo.toml
plonky2_bench/plonky2/examples/: bench_recursion.rs  pre_block.rs  range_check.rs  tx_loop.rs  verify_block.rs
plonky2_bench/plonky2/src/: lib.rs
plonky2_bench/plonky2/src/hash/: mod.rs
plonky2_bench/plonky2/src/hash/sha256/: circuit.rs  split_base.rs
plonky2_bench/plonky2/src/nonnative/biguint/: biguint.rs  nonnative.rs  split_nonnative.rs
plonky2_bench/plonky2/src/nonnative/u32/: mod.rs  serialization.rs  witness.rs
plonky2_bench/plonky2/src/nonnative/u32/gadgets/: arithmetic_u32.rs  multiple_comparison.rs  (+1 more)
plonky2_bench/src/: main.rs
plonky2_bench/src/biguint/: biguint.rs  mod.rs  nonnative.rs  split_nonnative.rs
plonky2_bench/src/semaphore/: access_set.rs  circuit.rs  mod.rs  signal.rs
plonky2_bench/src/u32/: serialization.rs
plonky2_bench/src/u32/gadgets/: arithmetic_u32.rs  multiple_comparison.rs  range_check.rs
plonky2_bench/src/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  mod.rs  range_check_u32.rs  subtraction_u32.rs
plonky2_bench/starky/: Cargo.toml
plonky2_bench/starky/src/: lib.rs  permutation_stark.rs  pre_block_stark.rs  stark_in_snark_bench.rs  unconstrained_stark.rs
plonky2_bench/starky/src/sha256_stark/: constants.rs  generation.rs  layout.rs  mod.rs
(+72 files in other folders)
