[package]
name = "halo2_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
halo2_proofs = "0.3.0"
halo2_gadgets = { version = "0.3.0", features = ["unstable-sha256-gadget"]}
rand = "0.8"

